--- a/dia8/blogPessoal/pom.xml
+++ b/dia8/blogPessoal/pom.xml
@@ -14,7 +14,7 @@
 	<name>blogPessoal</name>
 	<description>Blog Pessoal</description>
 	<properties>
-		<java.version>16</java.version>
+		<java.version>15</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -36,15 +36,23 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<!--  
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+			<exclusions>
+		   <exclusion>
+			<groupId>org.junit.vintage</groupId>
+			<artifactId>junit-vintage-engine</artifactId>
+			</exclusion>
+		</exclusions>		
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -53,8 +61,13 @@
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
-			</dependency>
-			</dependencies>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		</dependencies>
 
 	<build>
 		<plugins>
