--- a/dia8/blogPessoal/src/main/resources/application.properties
+++ b/dia8/blogPessoal/src/main/resources/application.properties
@@ -1,5 +1,10 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost/db_blogpessoal?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo&useSSl=false
-spring.datasource.username=root
-spring.datasource.password=
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost/db_blogpessoal?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo&useSSl=false
+#spring.datasource.username=root
+#spring.datasource.password=querer2021!!
+#spring.jpa.show-sql=true
+
+spring.jpa.generate-ddl=true
+spring.datasource.url=${JDBC_DATASOURCE_URL}
 spring.jpa.show-sql=true
+
